# TurboRun

./: .justfile  CLAUDE.md  Cargo.toml
docs/: 0-START-Design.md  0-START-Plan.md  README.md
plugins/: base.nu  noop.nu  timed.nu
src/: app.rs  color.rs  core.rs  data.rs  engine.rs  icon.rs  main.rs  plugin.rs  style.rs  theme.rs  util.rs  worker.rs
src/data/: ext.rs  task_id.rs
src/engine/: config.rs  mod.rs  plugin.rs  process.rs
src/ui/: app.rs  color.rs  common.rs  custom.rs  dashboard.rs  edit_task.rs  mod.rs  nav.rs  plugin.rs  style.rs  task.rs  task_editor.rs  task_viewer.rs  widget.rs
src/ui/page/: dashboard.rs  plugin.rs  task_editor.rs  task_viewer.rs
