[package]
name = "turborun"
version = "0.1.0"
edition = "2024"

[dependencies.egui]
version = "0.34.1"
default-features = false

[dependencies.eframe]
version = "0.34.1"
default-features = false
features = ["glow"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.0", features = ["derive", "env"] }
derive_setters = "0.1.9"
egui_flex = "0.6.0"
euclid = "0.22.14"
fastrand = "2.4.0"
itertools = "0.14.0"
log = "0.4.29"
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
tap = "1.0.1"
toml = "1.1.0"
win32job = "2.0.3"

[lints.clippy]
cargo       = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

# #I-language cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"           # can be fixed using `allowed-duplicate-crates`

# I-language #pedantic
doc_markdown = "allow"                      # allow non-words in docs without requiring backticks

# I-language #restriction
arbitrary_source_item_ordering = "allow"
as_conversions = "allow"
big_endian_bytes = "allow"                  # allows using `to_be_bytes` and `from_be_bytes`
blanket_clippy_restriction_lints = "allow"
default_numeric_fallback = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
let_underscore_must_use = "allow"           # allows ignoring results of functions marked `#[must_use]`
let_underscore_untyped = "allow"
little_endian_bytes = "allow"               # allows using `to_le_bytes` and `from_le_bytes`
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
panic = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_use = "allow"
question_mark_used = "allow"
ref_patterns = "allow"
self_named_module_files = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
unwrap_used = "allow"
while_float = "allow"
wildcard_enum_match_arm = "allow"

# II-language-arithmetic-and-casting #pedantic
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# II-language-arithmetic-and-casting #restriction
arithmetic_side_effects = "allow"
float_arithmetic = "allow"
float_cmp = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
modulo_arithmetic = "allow"

# III-conflicting-lints #complexity
needless_borrowed_reference = "allow"   # or: `clippy::pattern_type_mismatch`

# III-conflicting-lints #style
needless_else = "allow"                 # or: `clippy::else_if_without_else`

# III-conflicting-lints #restriction
pub_with_shorthand = "allow"            # xor: `clippy::pub_without_shorthand`
semicolon_outside_block = "allow"       # xor: `clippy::semicolon_inside_block`
unseparated_literal_suffix = "allow"    # xor: `clippy::separated_literal_suffix`

# IV-code-style #style
doc_overindented_list_items = "allow"   # allows using 4 spaces for indenting docs
manual_range_contains = "allow"         # makes code less noisy
match_ref_pats = "allow"                # just looks cool XD

# IV-code-style #nursery
option_if_let_else = "allow"            # helps readability in some cases
suboptimal_flops = "allow"              # makes code less noisy

# IV-code-style #pedantic
if_not_else = "allow"                   # helps readability in many cases
map_unwrap_or = "allow"                 # helps readability in some cases
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"       # e.g.: `winit::window::WindowBuilder`
must_use_candidate = "allow"
wildcard_imports = "allow"

# IV-code-style #restriction
as_underscore = "allow"
absolute_paths = "allow"
impl_trait_in_params = "allow"
min_ident_chars = "allow"
mod_module_files = "allow"
multiple_inherent_impl = "allow"
try_err ="allow"
